--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
+autopep8==2.0.1
+bcrypt==4.0.1
 certifi==2022.12.7
 charset-normalizer==2.1.1
 click==8.1.3
 colorama==0.4.6
 DateTime==4.9
 Flask==2.2.2
+Flask-Bcrypt==1.0.1
 Flask-JWT-Extended==4.4.4
 Flask-MySQL==1.5.2
 Flask-SQLAlchemy==3.0.2
@@ -13,12 +16,14 @@ importlib-metadata==6.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+pycodestyle==2.10.0
 PyJWT==2.6.0
 PyMySQL==1.0.2
 python-dotenv==0.21.0
 pytz==2022.7
 requests==2.28.1
 SQLAlchemy==1.4.45
+tomli==2.0.1
 urllib3==1.26.13
 Werkzeug==2.2.2
 zipp==3.11.0
